--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
         "@emotion/styled": "^11.8.1",
         "@mui/icons-material": "^5.8.0",
         "@mui/material": "^5.4.3",
+        "@mui/styles": "^5.8.0",
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.4",
-        "css-loader": "^6.6.0",
+        "css-loader": "^6.7.1",
+        "mini-css-extract-plugin": "^2.6.0",
+        "node-sass": "^7.0.1",
         "prop-types": "^15.8.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -36,6 +39,8 @@
         "react-router-dom": "^5.3.0",
         "redux": "^4.1.2",
         "redux-logger": "^3.0.6",
-        "redux-thunk": "^2.4.1"
+        "redux-thunk": "^2.4.1",
+        "sass-loader": "^13.0.0",
+        "style-loader": "^3.3.1"
     }
 }
